--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
+<!DOCTYPE html>
+<html lang="pt-br">
+  <head>
+    <meta charset="utf-8"
+    <lit
+  </head>
+
+
 <h1>professor de sociologia e sociólogo</h1>
 
 
