--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="pt-br">
   <head>
     <meta charset="utf-8"
-    <lit
+    <litle>PROFESSOR de SOCIOLOGIA e SOCIÓLOGO</litle> 
   </head>
 
 
-<h1>professor de sociologia e sociólogo</h1>
+<h1></h1>
 
 
 <p> O PROFESSOR DE SOCIOLOGIA E O SOCIÓLOGO REALIZA UM GRADUAÇÃO EM LICENCIATURA QUE DURA EM
