--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8"
     <litle>PROFESSOR de SOCIOLOGIA e SOCIÓLOGO</litle> 
+
+    
   </head>
 
 
@@ -24,7 +26,8 @@ ANALISAR A SOCIEDADE, POSSIBILIDADE DE AJUDAR A MELHORAR A SOCIEDADE , POSSIBILI
 TRABALHAR EM DIFERENTES ÁREAS, OPORTUNIDADE DE CRESCER PROFISSIONALMENTE, JÁ AS DESVANTAGENS DE
  SER UM PROFESSOR DE SOCIOLOGIA SÃO: ALTO ESTRESSE, LONGAS HORAS DE TRABALHO, BAIXO SALÁRIO, 
  DESPREZO SOCIAL, AS DESVANTAGENS DE SER UM SOCIÓLOGO SÃO: É UMA ÁREA DE CONHECIMENTO COMPLEXA
-  E ABRANGENTE, É NECESSÁRIO SER UM BOM COMUNICADOR, É NECESSÁRIO ESTAR EM APRENDIZADO CONTÍNUO, PODE HAVER muita PRESSÃO PARA SEGUIR CERTAS IDÉIAS OU CONCEITOS.
+  E ABRANGENTE, É NECESSÁRIO SER UM BOM COMUNICADOR, É NECESSÁRIO ESTAR EM APRENDIZADO CONTÍNUO, PODE 
+  HAVER muita PRESSÃO PARA SEGUIR CERTAS IDÉIAS OU CONCEITOS.
   A MÉDIA SALARIAL PARA UM PROFESSOR DE SOCIOLOGIA É DE R$ 2.334,00, E O SALÁRIO DE UM 
   SOCIÓLOGO É DE R$ 5.044,37, CASO QUEIRA SEGUIR ESTA PROFISSÃO SUGERIMOS AS SEGUINTES 
   UNIVERSIDADES: UNIVERSIDADE DE BRASÍLIA (UNB)
