--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
   <head>
     <meta charset="utf-8"
     <litle>PROFESSOR de SOCIOLOGIA e SOCIÓLOGO</litle> 
-
-    
-  </head>
-
-
-<h1></h1>
+    <link rel="stylesheet" href="style.css">
+ </head>
+ <body>
 
 
-<p> O PROFESSOR DE SOCIOLOGIA E O SOCIÓLOGO REALIZA UM GRADUAÇÃO EM LICENCIATURA QUE DURA EM
+      <h1 id="titulo"> CONHECER O QUE É SOCIÓLOGIA E SOCIÓLOGO</h1>
+
+
+<p class="TEXTO"> O PROFESSOR DE SOCIOLOGIA E O SOCIÓLOGO REALIZA UM GRADUAÇÃO EM LICENCIATURA QUE DURA EM
 TORNO DE 4 ANOS. A FUNÇÃO DO PROFESSOR DE SOCIOLOGIA É DAR AULA E PREPARAR OS ALUNOS PARA A 
  VIDA ADULTA O PROFESSOR DE SOCIOLOGIA NÃO ESTÁ APENAS PARA PASSAR INFORMAÇÕES. ELE ESTÁ A 
  PROMOVER A CIDADANIA.  O SOCIÓLOGO, ELE ESTUDA FATOS, USANDO MÉTODOS CIENTÍFICOS E CONSIDERADO
@@ -39,3 +39,4 @@ SOBRE POLÍTICA E SOCIEDADE. O SOCIÓLOGO TEM UM PAPEL ESSENCIAL NA COMPREENSÃO
 TENDO COMO PRINCIPAL PAPEL ESTUDAR E CLASSIFICAR AS FORMAÇÕES SOCIAIS PARA QUE, ASSIM, OUTRAS
  CIÊNCIAS SOCIAIS POSSAM INTERVIR PARA IMPLANTAR MELHORIAS.</p>
 
+</body>
