--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="pt-br">
   <head>
     <meta charset="utf-8"
-    <litle>PROFESSOR de SOCIOLOGIA e SOCIÓLOGO</litle> 
+    <litle> PROFESSOR de SOCIOLOGIA e SOCIÓLOGO</litle> 
     <link rel="stylesheet" href="style.css">
  </head>
  <body>
 
 
-      <h1 id="titulo"> CONHECER O QUE É SOCIÓLOGIA E SOCIÓLOGO</h1>
+      <h1 id="titulo"> PROFESSOR  DE SOCIÓLOGIA E SOCIÓLOGO </h1>
 
 
 <p class="TEXTO"> O PROFESSOR DE SOCIOLOGIA E O SOCIÓLOGO REALIZA UM GRADUAÇÃO EM LICENCIATURA QUE DURA EM
