--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <h1 id="titulo"> PROFESSOR  DE SOCIÓLOGIA E SOCIÓLOGO </h1>
 
 
-<p class="TEXTO"> O PROFESSOR DE SOCIOLOGIA E O SOCIÓLOGO REALIZA UM GRADUAÇÃO EM LICENCIATURA QUE DURA EM
+<p class="TEXTO"> O PROFESSOR DE SOCIOLOGIA E O SOCIÓLOGO REALIZA UM GRADUAÇÃO EM <strong> LICENCIATURA QUE DURA EM
 TORNO DE 4 ANOS. A FUNÇÃO DO PROFESSOR DE SOCIOLOGIA É DAR AULA E PREPARAR OS ALUNOS PARA A 
  VIDA ADULTA O PROFESSOR DE SOCIOLOGIA NÃO ESTÁ APENAS PARA PASSAR INFORMAÇÕES. ELE ESTÁ A 
  PROMOVER A CIDADANIA.  O SOCIÓLOGO, ELE ESTUDA FATOS, USANDO MÉTODOS CIENTÍFICOS E CONSIDERADO
