--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 
 <p class="TEXTO"> O PROFESSOR DE SOCIOLOGIA E O SOCIÓLOGO REALIZA UM GRADUAÇÃO EM <strong> LICENCIATURA QUE DURA EM
-TORNO DE 4 ANOS.</strong> A FUNÇÃO DO PROFESSOR DE SOCIOLOGIA É DAR AULA E PREPARAR OS ALUNOS PARA A 
+TORNO DE 4 ANOS </strong>. A FUNÇÃO DO PROFESSOR DE SOCIOLOGIA É DAR AULA E PREPARAR OS ALUNOS PARA A 
  VIDA ADULTA O PROFESSOR DE SOCIOLOGIA NÃO ESTÁ APENAS PARA PASSAR INFORMAÇÕES. ELE ESTÁ A 
  PROMOVER A CIDADANIA.  O SOCIÓLOGO, ELE ESTUDA FATOS, USANDO MÉTODOS CIENTÍFICOS E CONSIDERADO
  AS MUDANÇAS CONSTANTES NO MUNDO.
