--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
       <h1 id="titulo"> PROFESSOR  DE SOCIÓLOGIA E SOCIÓLOGO </h1>
 
-
+      
 <p class="TEXTO"> O PROFESSOR DE SOCIOLOGIA E O SOCIÓLOGO REALIZA UM GRADUAÇÃO EM <strong> LICENCIATURA QUE DURA EM
 TORNO DE 4 ANOS </strong>. A FUNÇÃO DO PROFESSOR DE SOCIOLOGIA É DAR AULA E PREPARAR OS ALUNOS PARA A 
  VIDA ADULTA O PROFESSOR DE SOCIOLOGIA NÃO ESTÁ APENAS PARA PASSAR INFORMAÇÕES. ELE ESTÁ A 
@@ -27,8 +27,10 @@ TRABALHAR EM DIFERENTES ÁREAS, OPORTUNIDADE DE CRESCER PROFISSIONALMENTE, JÁ A
  SER UM PROFESSOR DE SOCIOLOGIA SÃO: ALTO ESTRESSE, LONGAS HORAS DE TRABALHO, BAIXO SALÁRIO, 
  DESPREZO SOCIAL, AS DESVANTAGENS DE SER UM SOCIÓLOGO SÃO: É UMA ÁREA DE CONHECIMENTO COMPLEXA
   E ABRANGENTE, É NECESSÁRIO SER UM BOM COMUNICADOR, É NECESSÁRIO ESTAR EM APRENDIZADO CONTÍNUO, PODE 
-  HAVER muita PRESSÃO PARA SEGUIR CERTAS IDÉIAS OU CONCEITOS.
-  A MÉDIA SALARIAL PARA UM PROFESSOR DE SOCIOLOGIA É DE R$ 2.334,00, E O SALÁRIO DE UM 
+  HAVER muita PRESSÃO PARA SEGUIR CERTAS IDÉIAS OU CONCEITOS.</em>
+</p>
+
+</p class="TEXTO"> MÉDIA SALARIAL PARA UM PROFESSOR DE SOCIOLOGIA É DE R$ 2.334,00, E O SALÁRIO DE UM 
   SOCIÓLOGO É DE R$ 5.044,37, CASO QUEIRA SEGUIR ESTA PROFISSÃO SUGERIMOS AS SEGUINTES 
   UNIVERSIDADES: UNIVERSIDADE DE BRASÍLIA (UNB)
 UNIVERSIDADE FEDERAL FLUMINENSE (UFF)
@@ -40,3 +42,4 @@ TENDO COMO PRINCIPAL PAPEL ESTUDAR E CLASSIFICAR AS FORMAÇÕES SOCIAIS PARA QUE
  CIÊNCIAS SOCIAIS POSSAM INTERVIR PARA IMPLANTAR MELHORIAS.</p>
 
 </body>
+</html>
