--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <litle> PROFESSOR de SOCIOLOGIA e SOCIÓLOGO</litle> 
     <link rel="stylesheet" href="style.css">
  </head>
+
  <body>
-
-
-      <h1 id="titulo"> PROFESSOR  DE SOCIÓLOGIA E SOCIÓLOGO </h1>
-
-
+    <header>
+      <h1 class="titulo-principal"> PROFESSOR  DE SOCIÓLOGIA E SOCIÓLOGO </h1>
+    </header>
+    <img
 <p class="TEXTO"> O PROFESSOR DE SOCIOLOGIA E O SOCIÓLOGO REALIZA UM GRADUAÇÃO EM <strong> LICENCIATURA QUE DURA EM
 TORNO DE 4 ANOS </strong>. A FUNÇÃO DO PROFESSOR DE SOCIOLOGIA É DAR AULA E PREPARAR OS ALUNOS PARA A 
  VIDA ADULTA O PROFESSOR DE SOCIOLOGIA NÃO ESTÁ APENAS PARA PASSAR INFORMAÇÕES. ELE ESTÁ A 
