--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
       <h1 class="titulo-principal"> PROFESSOR  DE SOCIÓLOGIA E SOCIÓLOGO </h1>
     </header>
-    <img
+    <img id="banner" src="banner.jpg"
 <p class="TEXTO"> O PROFESSOR DE SOCIOLOGIA E O SOCIÓLOGO REALIZA UM GRADUAÇÃO EM <strong> LICENCIATURA QUE DURA EM
 TORNO DE 4 ANOS </strong>. A FUNÇÃO DO PROFESSOR DE SOCIOLOGIA É DAR AULA E PREPARAR OS ALUNOS PARA A 
  VIDA ADULTA O PROFESSOR DE SOCIOLOGIA NÃO ESTÁ APENAS PARA PASSAR INFORMAÇÕES. ELE ESTÁ A 
