--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
     <header>
       <h1 class="titulo-principal"> PROFESSOR  DE SOCIÓLOGIA E SOCIÓLOGO </h1>
     </header>
-    <img id="banner" src="banner.jpg"
+    <img id="banner" src="banner.jpg">
+    <div class="principal">
+        <h2 class="titulo-centralizado">sobre professor de sociologia e sociologo</h2>
+
+        
 <p class="TEXTO"> O PROFESSOR DE SOCIOLOGIA E O SOCIÓLOGO REALIZA UM GRADUAÇÃO EM <strong> LICENCIATURA QUE DURA EM
 TORNO DE 4 ANOS </strong>. A FUNÇÃO DO PROFESSOR DE SOCIOLOGIA É DAR AULA E PREPARAR OS ALUNOS PARA A 
  VIDA ADULTA O PROFESSOR DE SOCIOLOGIA NÃO ESTÁ APENAS PARA PASSAR INFORMAÇÕES. ELE ESTÁ A 
@@ -21,16 +25,16 @@ ADMINISTRAÇÃO PÚBLICA, EM UNIVERSIDADE, FUNDAÇÕES, INSTITUTOS DE PESQUISA, 
 ESTADUAIS OU FEDERAIS. AS VANTAGENS DA PROFISSÃO DE PROFESSOR DE SOCIOLOGIA: SÃO APRENDER A 
 PENSAR CRITICAMENTE SOBRE QUESTÕES SOCIAIS, ENSINAR SOBRE A COMPLEXIDADE DO MUNDO, CRIAR UM 
 AMBIENTE DE APRENDIZAGEM ESTIMULANTE.</p>
-<p> AS VANTAGENS DE SER UM SOCIÓLOGO SÃO: COMPREENDER E 
+<p id="AS VANTAGENS"><em>AS VANTAGENS DE SER UM SOCIÓLOGO SÃO: <strong> E 
 ANALISAR A SOCIEDADE, POSSIBILIDADE DE AJUDAR A MELHORAR A SOCIEDADE , POSSIBILIDADE DE 
 TRABALHAR EM DIFERENTES ÁREAS, OPORTUNIDADE DE CRESCER PROFISSIONALMENTE, JÁ AS DESVANTAGENS DE
  SER UM PROFESSOR DE SOCIOLOGIA SÃO: ALTO ESTRESSE, LONGAS HORAS DE TRABALHO, BAIXO SALÁRIO, 
  DESPREZO SOCIAL, AS DESVANTAGENS DE SER UM SOCIÓLOGO SÃO: É UMA ÁREA DE CONHECIMENTO COMPLEXA
   E ABRANGENTE, É NECESSÁRIO SER UM BOM COMUNICADOR, É NECESSÁRIO ESTAR EM APRENDIZADO CONTÍNUO, PODE 
-  HAVER muita PRESSÃO PARA SEGUIR CERTAS IDÉIAS OU CONCEITOS.</em>
-</p>
+  HAVER muita PRESSÃO PARA SEGUIR CERTAS IDÉIAS OU CONCEITOS</strong>.</em>
 
-</p class="TEXTO"> MÉDIA SALARIAL PARA UM PROFESSOR DE SOCIOLOGIA É DE R$ 2.334,00, E O SALÁRIO DE UM 
+  
+</p> class="TEXTO"> MÉDIA SALARIAL PARA UM PROFESSOR DE SOCIOLOGIA É DE R$ 2.334,00, E O SALÁRIO DE UM 
   SOCIÓLOGO É DE R$ 5.044,37, CASO QUEIRA SEGUIR ESTA PROFISSÃO SUGERIMOS AS SEGUINTES 
   UNIVERSIDADES: UNIVERSIDADE DE BRASÍLIA (UNB)
 UNIVERSIDADE FEDERAL FLUMINENSE (UFF)
