--- a/index.html
+++ b/index.html
@@ -33,10 +33,16 @@ TRABALHAR EM DIFERENTES ÁREAS, OPORTUNIDADE DE CRESCER PROFISSIONALMENTE, JÁ A
   E ABRANGENTE, É NECESSÁRIO SER UM BOM COMUNICADOR, É NECESSÁRIO ESTAR EM APRENDIZADO CONTÍNUO, PODE 
   HAVER muita PRESSÃO PARA SEGUIR CERTAS IDÉIAS OU CONCEITOS</strong>.</em>
 
-  
-</p> class="TEXTO"> MÉDIA SALARIAL PARA UM PROFESSOR DE SOCIOLOGIA É DE R$ 2.334,00, E O SALÁRIO DE UM 
-  SOCIÓLOGO É DE R$ 5.044,37, CASO QUEIRA SEGUIR ESTA PROFISSÃO SUGERIMOS AS SEGUINTES 
-  UNIVERSIDADES: UNIVERSIDADE DE BRASÍLIA (UNB)
+
+</p> MÉDIA SALARIAL PARA UM PROFESSOR DE SOCIOLOGIA É DE R$ 2.334,00, E O SALÁRIO DE UM 
+  SOCIÓLOGO É DE R$ 5.044,37.
+    </div>
+<div class="CASO QUEIRA SEGUIR ESTA PROFISSÃO SUGERIMOS AS SEGUINTES 
+UNIVERSIDADES:"
+   <h3 class="titulo-centralizado">CASO QUEIRA SEGUIR ESTA PROFISSÃO SUGERIMOS AS SEGUINTES 
+    UNIVERSIDADES</h3>
+
+UNIVERSIDADE DE BRASÍLIA (UNB)
 UNIVERSIDADE FEDERAL FLUMINENSE (UFF)
 ESCOLA DE SOCIOLOGIA E POLÍTICA DE SÃO PAULO (ESP)
 ESTUDAR SOCIOLOGIA É MUITO IMPORTANTE PARA SE ENTENDER O PAPEL DE CADA INDIVÍDUO DENTRO DA 
