--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@ UNIVERSIDADES:"
    <h3 class="titulo-centralizado">CASO QUEIRA SEGUIR ESTA PROFISSÃO SUGERIMOS AS SEGUINTES 
     UNIVERSIDADES</h3>
 
+    <ul> 
+        <li class="itens"
+
 UNIVERSIDADE DE BRASÍLIA (UNB)
 UNIVERSIDADE FEDERAL FLUMINENSE (UFF)
 ESCOLA DE SOCIOLOGIA E POLÍTICA DE SÃO PAULO (ESP)
